# rust-bootcamp

./: .gitignore  LICENSE  README.md
01_beginner/01_basics/contrants_and_statics/: Cargo.toml
01_beginner/04_structure_projects/auth_service/: Cargo.toml
01_beginner/05_structure_large_projects/cargo_features/: Cargo.toml
01_beginner/05_structure_large_projects/draw/: Cargo.toml
01_beginner/contrants_and_statics/src/: main.rs
01_beginner/data_types/src/: main.rs
02_intermediate/02_advanced memory manag/box_smart_pointer/: Cargo.toml
02_intermediate/02_advanced memory manag/generic_lifetimes/: Cargo.toml
02_intermediate/02_advanced memory manag/rc_smart_pointer/: Cargo.toml
02_intermediate/02_advanced memory manag/refcell_smart_pointer/: Cargo.toml
02_intermediate/02_advanced memory manag/structs_ellision/: Cargo.toml
02_intermediate/03_error_handling/multiple_error_types/: Cargo.toml
02_intermediate/03_error_handling/recoverable_error/: Cargo.toml
02_intermediate/04_advanced_error_handling/basic_error_handling/: Cargo.toml
02_intermediate/04_advanced_error_handling/error_stack_example/: Cargo.toml
02_intermediate/05_functional features/iterator_collections/: Cargo.toml
02_intermediate/05_functional features/iterator_pattern_pt2/: Cargo.toml
03_advanced/01_concurrency/async_await_basics/: Cargo.toml
03_advanced/01_concurrency/creating_threads/: Cargo.toml
03_advanced/01_concurrency/message_passing_between_threads/: Cargo.toml
03_advanced/02_rust macros/attribute_macro/: Cargo.toml
03_advanced/02_rust macros/attribute_macro/src/: lib.rs
03_advanced/02_rust macros/procedural_macros/: Cargo.toml
03_advanced/02_rust macros/procedural_macros/src/: lib.rs  main.rs
auth_service/src/: auth_utils.rs  lib.rs  main.rs
projects/CLI_Jira_Clone/: Cargo.toml  README.md
projects/CLI_Jira_Clone/data/: db.json
projects/api_stackoverflow_clone/: Cargo.toml  README.md
projects/api_stackoverflow_clone/src/: main.rs  models.rs
projects/api_stackoverflow_clone/src/handlers/: handlers_inner.rs  mod.rs
projects/api_stackoverflow_clone/src/persistance/: answers_dao.rs  questions_dao.rs
projects/microservices/: Cargo.toml  Dockerfile-auth  Dockerfile-health  README.md  docker-compose.yaml
projects/microservices/src/auth-service/: auth.rs  sessions.rs  users.rs
projects/microservices/src/client/: main.rs
projects/microservices/src/health-check-service/: main.rs
projects/microservices/workflow/: prod.yml.txt
(+90 files in other folders)
