[package]
name = "api_stackoverflow_clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
axum = "0.8.6"
sqlx = { version = "0.8.6", features = [ "runtime-tokio-rustls" , "postgres", "time", "uuid"] }
dotenvy = "0.15.7"
log = "0.4.28"
pretty_env_logger = "0.5"
async-trait = "0.1.89"
thiserror = "2.0.17"