[package]
name = "procedural_macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true
# above implicity link our library create with the compliter provided proc macro crate, which will
# give us all the tools we need to build procedural macros.

[dependencies]
quote = "1.0.41"
chrono = "0.4.42"
syn = { version = "2.0.106", features = ["full"] }
attribute_macro = { path = "../attribute_macro"}